--- a/agent-session/agent-runtime-mcp/src/visualizer.html
+++ b/agent-session/agent-runtime-mcp/src/visualizer.html
@@ -99,15 +99,28 @@
     overflow-y: auto;
     padding: 8px 0;
   }
-  .trace-event {
-    padding: 6px 16px;
-    font-size: 11px;
+  .trace-item {
     border-bottom: 1px solid #111120;
+  }
+  .trace-item:hover .trace-event { background: #111120; }
+  .trace-event {
+    padding: 6px 12px 6px 16px;
+    font-size: 11px;
     display: flex;
     gap: 8px;
-    align-items: baseline;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
   }
   .trace-event:hover { background: #111120; }
+  .trace-expand {
+    width: 18px;
+    flex-shrink: 0;
+    color: #555;
+    font-size: 10px;
+    transition: transform 0.15s ease;
+  }
+  .trace-item.expanded .trace-expand { transform: rotate(90deg); color: #a78bfa; }
   .trace-ts { color: #444; min-width: 65px; font-size: 10px; }
   .trace-action { font-weight: 600; min-width: 60px; }
   .trace-detail { color: #888; flex: 1; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
@@ -118,6 +131,56 @@
   .act-error { color: #f87171; }
   .act-init { color: #a78bfa; }
   .act-done { color: #34d399; }
+
+  .trace-details {
+    display: none;
+    padding: 10px 16px 12px 44px;
+    font-size: 11px;
+    background: #08080c;
+    border-top: 1px solid #111120;
+    max-height: 280px;
+    overflow-y: auto;
+  }
+  .trace-item.expanded .trace-details { display: block; }
+  .trace-details pre {
+    margin: 0;
+    white-space: pre-wrap;
+    word-break: break-word;
+    color: #9ca3af;
+    font-family: 'SF Mono', 'Fira Code', monospace;
+    font-size: 10px;
+    line-height: 1.45;
+  }
+  .trace-details .detail-row {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    gap: 6px 12px;
+    padding: 3px 0;
+    border-bottom: 1px solid #15151f;
+  }
+  .trace-details .detail-rows .detail-row:last-child { border-bottom: none; }
+  .trace-details .detail-key {
+    color: #a78bfa;
+    font-weight: 500;
+  }
+  .trace-details .detail-val {
+    color: #c8c8d8;
+    word-break: break-word;
+    white-space: pre-wrap;
+  }
+  .trace-details .detail-raw {
+    margin-top: 10px;
+    padding-top: 8px;
+    border-top: 1px solid #1a1a28;
+    color: #6b7280;
+  }
+  .trace-details .detail-raw-label {
+    font-size: 9px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #555;
+    margin-bottom: 4px;
+  }
 
   .context-panel {
     border-top: 1px solid #222238;
@@ -398,10 +461,32 @@
     });
   }
 
+  function formatDetailValue(val) {
+    if (val === undefined) return '—';
+    if (val === null) return 'null';
+    if (typeof val === 'object') return JSON.stringify(val, null, 2);
+    return String(val);
+  }
+
+  function buildDetailsHtml(event) {
+    const rows = Object.entries(event)
+      .filter(([k]) => k !== '_raw')
+      .map(([k, v]) => `<div class="detail-row"><span class="detail-key">${escapeHtml(k)}</span><span class="detail-val">${escapeHtml(formatDetailValue(v))}</span></div>`)
+      .join('');
+    const raw = JSON.stringify(event, null, 2);
+    return `<div class="detail-rows">${rows}</div><div class="detail-raw-label">Raw JSON</div><pre class="detail-raw">${escapeHtml(raw)}</pre>`;
+  }
+
+  function escapeHtml(s) {
+    const div = document.createElement('div');
+    div.textContent = s;
+    return div.innerHTML;
+  }
+
   function appendTraceEvent(event) {
     const list = document.getElementById('traceList');
-    const div = document.createElement('div');
-    div.className = 'trace-event';
+    const item = document.createElement('div');
+    item.className = 'trace-item';
 
     const time = event.ts ? new Date(event.ts).toLocaleTimeString() : '';
     let actionClass = 'act-init';
@@ -422,7 +507,7 @@
         break;
       case 'human_input_requested':
         actionClass = 'act-human';
-        detail = `⏸ ${event.prompt?.substring(0, 50)}...`;
+        detail = `⏸ ${(event.prompt || '').substring(0, 50)}${(event.prompt || '').length > 50 ? '...' : ''}`;
         break;
       case 'iteration_limit':
         actionClass = 'act-error';
@@ -440,12 +525,26 @@
         detail = JSON.stringify(event).substring(0, 60);
     }
 
-    div.innerHTML = `
-      <span class="trace-ts">${time}</span>
-      <span class="trace-action ${actionClass}">${event.action}</span>
-      <span class="trace-detail">${detail}</span>
+    const header = document.createElement('div');
+    header.className = 'trace-event';
+    header.innerHTML = `
+      <span class="trace-expand" aria-hidden="true">▶</span>
+      <span class="trace-ts">${escapeHtml(time)}</span>
+      <span class="trace-action ${actionClass}">${escapeHtml(event.action)}</span>
+      <span class="trace-detail">${escapeHtml(detail)}</span>
     `;
-    list.appendChild(div);
+
+    const details = document.createElement('div');
+    details.className = 'trace-details';
+    details.innerHTML = buildDetailsHtml(event);
+
+    header.addEventListener('click', () => {
+      item.classList.toggle('expanded');
+    });
+
+    item.appendChild(header);
+    item.appendChild(details);
+    list.appendChild(item);
     list.scrollTop = list.scrollHeight;
   }
 
